Fix #516 ... again