@@ -1,6 +1,7 @@
 package com.kevinguanchedarias.owgejava.business.mission.processor;
 
 import com.kevinguanchedarias.owgejava.builder.UnitMissionReportBuilder;
+import com.kevinguanchedarias.owgejava.business.RequirementBo;
 import com.kevinguanchedarias.owgejava.business.mission.MissionEventEmitterBo;
 import com.kevinguanchedarias.owgejava.business.mission.MissionUnitsFinderBo;
 import com.kevinguanchedarias.owgejava.business.unit.HiddenUnitBo;
@@ -10,13 +11,12 @@ import com.kevinguanchedarias.owgejava.business.util.TransactionUtilService;
 import com.kevinguanchedarias.owgejava.entity.Mission;
 import com.kevinguanchedarias.owgejava.entity.ObtainedUnit;
 import com.kevinguanchedarias.owgejava.entity.UserStorage;
+import com.kevinguanchedarias.owgejava.entity.util.EntityRefreshUtilService;
 import com.kevinguanchedarias.owgejava.enumerations.MissionType;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-
-import jakarta.persistence.EntityManager;
 
 import java.util.List;
 
@@ -28,8 +28,9 @@ public class DeployMissionProcessor implements MissionProcessor {
     private final TransactionUtilService transactionUtilService;
     private final ObtainedUnitEventEmitter obtainedUnitEventEmitter;
     private final MissionEventEmitterBo missionEventEmitterBo;
-    private final EntityManager entityManager;
+    private final EntityRefreshUtilService entityRefreshUtilService;
     private final HiddenUnitBo hiddenUnitBo;
+    private final RequirementBo requirementBo;
 
     @Override
     public boolean supports(MissionType missionType) {
@@ -46,7 +47,7 @@ public class DeployMissionProcessor implements MissionProcessor {
                 .map(current -> obtainedUnitBo.moveUnit(current, userId, mission.getTargetPlanet().getId()))
                 .toList();
 
-        var deployedMission = alteredUnits.get(0).getMission();
+        var deployedMission = alteredUnits.getFirst().getMission();
         if (deployedMission != null) {
             deployedMission.setInvisible(deployedMission.getInvolvedUnits().stream().allMatch(
                     involvedUnit -> hiddenUnitBo.isHiddenUnit(user, involvedUnit.getUnit())
@@ -55,9 +56,12 @@ public class DeployMissionProcessor implements MissionProcessor {
 
         mission.setResolved(true);
         transactionUtilService.doAfterCommit(() -> {
-            alteredUnits.forEach(entityManager::refresh);
+            alteredUnits.forEach(entityRefreshUtilService::refresh);
             if (user.equals(mission.getTargetPlanet().getOwner())) {
                 obtainedUnitEventEmitter.emitObtainedUnits(user);
+                transactionUtilService.runWithRequiresNew(() ->
+                        requirementBo.triggerUnitBuildCompletedOrKilled(user, alteredUnits.stream().map(ObtainedUnit::getUnit).toList())
+                );
             }
             missionEventEmitterBo.emitLocalMissionChange(mission, user.getId());
         });
